@@ -1,5 +1,5 @@
 /*
-    Copyright 2007-2016, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2007-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -31,8 +31,12 @@ namespace fostlib {
         };
 
         /// Return a copy of the underlying string
-        const impl_type &underlying() const {
+        const impl_type &underlying() const & {
             return m_string;
+        }
+        /// Rip out the content of this tagged_string
+        impl_type &&underlying() && {
+            return std::move(m_string);
         }
 
         /// Construct an empty tagged string
